@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Fixed repr() and str() of complex numbers with infinity or nan as real or
+  imaginary part.
+
 - Clear all free list during a gc.collect() of the highest generation in order
   to allow pymalloc to free more arenas. Python may give back memory to the
   OS earlier.
